// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots EmptyState Default 1`] = `
<div
  className="sc-bwzfXH eoNxIY"
>
  <div
    className="sc-bwzfXH dsJuLm"
  >
    <div
      aria-hidden={true}
      className="sc-chPdSV amzEV"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
    <div
      className="sc-bwzfXH cyysQM"
    >
      <div
        className="sc-kAzzGY rMxXQ"
        role="heading"
      >
        No filters applied
      </div>
    </div>
    <div
      className="sc-bwzfXH faaawA"
    >
      <p
        className="sc-bxivhb dGxAqY"
      >
        ..A tumbleweed passes by
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With button (as children) 1`] = `
<div
  className="sc-bwzfXH eoNxIY"
>
  <div
    className="sc-bwzfXH dsJuLm"
  >
    <div
      aria-hidden={true}
      className="sc-chPdSV amzEV"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
    <div
      className="sc-bwzfXH cyysQM"
    >
      <div
        className="sc-kAzzGY rMxXQ"
        role="heading"
      >
        No filters applied
      </div>
    </div>
    <div
      className="sc-bwzfXH faaawA"
    >
      <p
        className="sc-bxivhb dGxAqY"
      >
        There are no filters applied yet. Use the button below to apply a filter.
      </p>
    </div>
    <button
      className="sc-htoDjs kwPcoU"
      color={undefined}
      disabled={undefined}
      icon={undefined}
      id={undefined}
      onClick={[Function]}
      title="Add filter"
      type="button"
    >
      Add filter
    </button>
  </div>
</div>
`;
